<resources>
    <string name="app_name">RemitM</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="login_to_remitm_online">Login to RemitM Online</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_back_to_login">Already have an account? Back to Login!</string>
    <string name="new_to_payscanner_create_account">New to PAYscanner? Create account!</string>
    <string name="login_to_payscanner">Login to PAYscanner</string>
    <string name="forget_your_password">Forget your password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
